vanslogs-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: vanslogs
spec: {}
status: {}
